# xaitoolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_grad_based_xai.ipynb  grad_based_xai.ipynb
src/xaitoolkit/: __init__.py  cli.py  xai_setup.py
src/xaitoolkit/loaders/: model_loader.py  preprocess.py
src/xaitoolkit/methods/: ig.py  lime_stratified.py  occlusion.py  rise.py  saliency.py  shap_axis_aligned.py  smoothgrad.py
src/xaitoolkit/utils/: viz.py
