[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xaitoolkit"
version = "0.1.1"
description = "A lightweight toolkit to explain PyTorch vision models with gradient and perturbation-based XAI."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Muhammad Rashid" }
]
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pillow",
  "matplotlib",
  "timm",
  "scikit-image",
  "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/rashidrao-pk/xaitoolkit"

[project.scripts]
xai-explain = "xaitoolkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
